<resources>    <string name="app_name">Movie Retrofit MVP</string>    <string name="btnsearch">Search</string>    <string name="search_movie">Search Movie Title</string>    <string name="todo">TODO</string>    <string name="movie_title">Movie Title</string>    <string name="release_of_date">Release of Date</string>    <string name="movie_overview">Movie Overview</string>    <string name="detail">Detail</string>    <string name="detail_activity">Detail Movie Activity</string></resources>