<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:orientation="horizontal"    android:paddingTop="@dimen/half_padding"    android:paddingBottom="@dimen/half_padding"    android:paddingLeft="@dimen/full_padding"    android:paddingRight="@dimen/full_padding"    android:layout_width="match_parent"    android:layout_height="wrap_content">    <ImageView        android:id="@+id/poster"        android:src="@mipmap/ic_launcher"        android:layout_width="wrap_content"        android:layout_weight="0.2"        android:scaleType="fitXY"        android:layout_height="168dp"        android:contentDescription="@string/todo" />    <LinearLayout        android:orientation="vertical"        android:layout_weight="0.8"        android:paddingLeft="@dimen/half_padding"        android:layout_width="wrap_content"        android:layout_height="wrap_content">        <TextView            android:id="@+id/title"            android:text="@string/movie_title"            android:textSize="24sp"            android:textStyle="bold"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:id="@+id/release"            android:text="@string/release_of_date"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:id="@+id/overview"            android:text="@string/movie_overview"            android:maxLines="3"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <Button            android:id="@+id/btnDetail"            android:text="@string/detail"            style="@style/Widget.AppCompat.Button.Colored"            android:layout_width="match_parent"            android:layout_height="wrap_content" />    </LinearLayout></LinearLayout>