<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:orientation="vertical"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".view.DetailActivity">    <ImageView        android:id="@+id/detailBackdrop"        android:src="@mipmap/ic_launcher"        android:layout_width="match_parent"        android:layout_height="256dp"        android:contentDescription="@string/todo" />    <ScrollView        android:layout_width="match_parent"        android:layout_height="wrap_content">        <LinearLayout            android:orientation="vertical"            android:padding="@dimen/half_padding"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:id="@+id/detailTitle"                tools:text="@string/movie_title"                tools:textSize="24sp"                tools:textStyle="bold"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:paddingBottom="4dp"                android:paddingTop="4dp"                android:textColor="@color/colorAccent"                android:textStyle="bold"                android:text="@string/release_of_date"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detailRelease"                android:paddingBottom="4dp"                android:paddingTop="4dp"                tools:text="@string/release_of_date"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:paddingBottom="4dp"                android:paddingTop="4dp"                android:textColor="@color/colorAccent"                android:textStyle="bold"                android:text="@string/movie_overview"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detailOverview"                android:paddingBottom="4dp"                android:paddingTop="4dp"                tools:text="@string/movie_overview"                android:layout_width="match_parent"                android:layout_height="wrap_content" />        </LinearLayout>    </ScrollView></LinearLayout>